<resources>
    <string name="app_name" translatable="false">Lab2</string>
    <string name="title" translatable="false">中山大学学生信息系统</string>
    <string name="ID" translatable="false">学号:</string>
    <string name="password" translatable="false">密码:</string>
    <string name="hint1" translatable="false">请输入学号</string>
    <string name="hint2" translatable="false">请输入密码</string>
    <string name="student" translatable="false">学生</string>
    <string name="teacher" translatable="false">教职工</string>
    <string name="login" translatable="false">登陆</string>
    <string name="signin" translatable="false">注册</string>
    <string name="sysu_sign" translatable="false">校徽</string>
</resources>
