<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearlayout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            android:text="@string/title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="20dp"/>

        <ImageView
            android:id="@+id/img"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/sysu"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/sysu_sign" />
    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.TextInputLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_number"
        app:errorEnabled="true">
        <EditText
            style="@style/edit_text"
            android:id="@+id/edit_text1"
            android:inputType="number"
            android:hint="@string/hint1" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_password"
        app:errorEnabled="true">
        <EditText
            style="@style/edit_text"
            android:id="@+id/edit_text2"
            android:inputType="textPassword"
            android:hint="@string/hint2"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.constraint.ConstraintLayout  xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <RadioGroup
            android:id="@+id/radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <RadioButton
                android:id="@+id/radio_student"
                style="@style/radio_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:checked="true"
                android:text="@string/student" />

            <RadioButton
                android:id="@+id/radio_teacher"
                style="@style/radio_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/teacher" />
        </RadioGroup>
        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.5">
        </android.support.constraint.Guideline>

        <Button
            android:id="@+id/button_login"
            android:background="@drawable/button"
            android:text="@string/login"
            style="@style/button"
            android:layout_marginEnd="5dp"
            app:layout_constraintTop_toBottomOf="@id/radio"
            app:layout_constraintRight_toLeftOf="@id/guideline"/>
        <Button
            android:id="@+id/button_signin"
            android:background="@drawable/button"
            android:text="@string/signin"
            style="@style/button"
            android:layout_marginStart="5dp"
            app:layout_constraintTop_toBottomOf="@id/radio"
            app:layout_constraintLeft_toRightOf="@id/guideline"/>
    </android.support.constraint.ConstraintLayout>

</LinearLayout>